--- a/src/translations/gzv.json
+++ b/src/translations/gzv.json
@@ -3,32 +3,32 @@
     "---notes2": "Brand names like PenguinMod, Scratch or TurboWarp should not be translated.",
     "---notes3": "Tokens like $1 or $2 will be replaced on the site with usernames, numbers, etc. Some HTML code like <br> may be used for newlines in certain text.",
     "---notes4": "Certain text may be out of order from other text. This is because Google Sheets makes inserting text difficult.",
-    "lang.name": "English",
-    "lang.default": "Same as browser",
+    "lang.name": "Gen z vocab (LOLCAT)",
+    "lang.default": "Same as bwoser",
     "lang.count": "$1 languages translated",
-    "translation.details": "Nearly all translations in this list are contributed by some cool people. Let us know of any mistakes we made.",
+    "translation.details": "Nearly all translations in this list are community provided. Let us know of any mistakes we made.",
     "translation.warning": "PenguinMod is made by English-speaking developers. You might see minor issues and sorry for any translation errors if there are any.",
     "generic.error": "An error occurred. Please try again later.",
     "generic.notfound": "Nothing was found.",
     "generic.notfoundonuser": "Nothing was found. Did you misspell something or does the user not exist?",
     "generic.noneyet": "Nothing yet!",
-    "generic.errorsmall": "Unknown error",
-    "generic.errortitle": "Error",
+    "generic.errorsmall": "Unknown error!?!?",
+    "generic.errortitle": "me found error",
     "generic.notranslation": "Missing translation",
     "generic.temporary": "Temporary",
     "console.warning1": "SCAM ALERT!",
     "console.warning2": "Do NOT paste things into here that other people sent you!",
     "console.warning3": "If you don't know what this window does, EXIT NOW! People can use this to upload inappropriate projects under YOUR name, delete YOUR projects, and get YOU banned from PenguinMod!",
     "navigation.theme": "Switch theme",
-    "navigation.create": "Create",
-    "navigation.search": "Search for projects...",
-    "navigation.mystuff": "My Stuff",
-    "navigation.discord": "Join our Discord!",
-    "navigation.login": "Sign in",
-    "navigation.logout": "Logout",
-    "navigation.profile": "Profile",
+    "navigation.create": "make",
+    "navigation.search": "search for projects...",
+    "navigation.mystuff": "stuff",
+    "navigation.discord": "join dis Discord",
+    "navigation.login": "login",
+    "navigation.logout": "logout",
+    "navigation.profile": "profile",
     "navigation.language": "Switch Language",
-    "home.welcome": "Wasssup, $1!",
+    "home.welcome": "Wassup, $1!",
     "home.introduction1": "Block-based coding with tons of capabilities",
     "home.introduction2": "Built off of Scratch and TurboWarp",
     "home.tryout": "Try it out",
@@ -37,10 +37,10 @@
     "home.none.featured.green": "Nothing found. You can help feature projects by clicking the green checkmark below them.",
     "home.none.uploaded": "Nothing found. Why not upload a project of your own?",
     "home.scratchnote": "Scratch Note: Please don't mention PenguinMod on Scratch, we have different rules compared to Scratch! 😅",
-    "home.sections.whatsnew": "What's new?",
-    "home.sections.githubcommits": "Recent changes",
+    "home.sections.whatsnew": "The news?",
+    "home.sections.githubcommits": "File changes",
     "home.sections.githubcommits.failed.generic": "Failed to load recent changes.",
-    "home.sections.githubcommits.failed.provide": "GitHub has skibidi rizz. Please try again later.",
+    "home.sections.githubcommits.failed.provide": "GitHub failed to provide recent changes. Please try again later.",
     "home.sections.feed": "My Feed",
     "home.sections.weeklyfeatured": "Latest featured projects",
     "home.sections.todaysprojects": "Latest projects",
@@ -62,9 +62,9 @@
     "home.footer.sections.info.privacy": "Privacy Policy",
     "home.footer.sections.info.guidelines": "Uploading Guidelines",
     "home.footer.sections.donate": "Donate",
-    "feed.following": "$1 followed you",
-    "feed.uploaded": "$1 uploaded $2",
-    "feed.remixed": "$1 remixed $2",
+    "feed.following": "$1 is cool, so they followed you",
+    "feed.uploaded": "$1 made a new project named $2",
+    "feed.remixed": "$1 remixed a project called $2",
     "feed.posted": "$1 made a post",
     "search.title": "Search",
     "search.query": "Searching for $1",
@@ -160,13 +160,13 @@
     "project.rating.e": "For all ages",
     "project.rating.e10": "For ages 10+",
     "project.rating.e13": "For ages 13+",
-    "project.rating.t": "For teens",
-    "project.elements.blood": "Contains blood",
-    "project.elements.horror": "Contains scary elements",
-    "project.elements.flashing": "Contains flashing lights or flickering elements",
-    "project.elements.audio": "Contains loud audio",
-    "project.elements.sensitive": "Contains sensitive topics",
-    "project.elements.unknown": "Unknown Restriction",
+    "project.rating.t": "for big kids only",
+    "project.elements.blood": "blood included",
+    "project.elements.horror": "has scary in it",
+    "project.elements.flashing": "has scary lights and sound",
+    "project.elements.audio": "supa loud sound",
+    "project.elements.sensitive": "is sentitive",
+    "project.elements.unknown": "is blocked for some reason unknown ",
     "uploading.title": "Upload",
     "uploading.project.title": "Project Title",
     "uploading.project.title.default": "Project",
@@ -216,9 +216,9 @@
     "mystuff.error": "An error occurred. We couldn't get your uploaded projects.",
     "mystuff.confirm.delete": "Delete $1? This CANNOT be undone!\nType \"$2\" to delete this project.",
     "report.title": "Report",
-    "report.reason.user.offsite": "The user has inappropriate off-site behavior",
-    "report.reason.user.sexual": "The user posts sexual content or references it",
-    "report.reason.user.attacker": "The user attacks other users",
+    "report.reason.user.offsite": "this user has weird behavior",
+    "report.reason.user.sexual": "this user is a simp and has sexual related topics",
+    "report.reason.user.attacker": "this user attacks other",
     "report.reason.user.illegal": "The user posts illegal content",
     "report.reason.project.malware": "The project contains malware",
     "report.reason.project.nocontrols": "The project removes my ability to stop or pause it",
@@ -280,12 +280,12 @@
     "payment.paypal.card": "PayPal / Card",
     "payment.paypal": "PayPal",
     "payment.cashapp": "Cash App",
-    "donated.title": "Thanks for donating! ✨",
+    "donated.title": "TYSVM FOR DONATING! ✨",
     "donated.subtitle": "We hope you continue to support PenguinMod, even if it's not with money but by sharing and using our service!",
     "donated.perks": "Want some donator perks?",
     "donated.perks.howto": "Email us at {{EMAIL}} with your transaction ID and PenguinMod username!",
     "donated.location": "Your donation can help us fund PenguinMod's server and domain!",
-    "donated.thanks": "Thanks for supporting us! 😄",
+    "donated.thanks": "tysm for supporting us! 😄",
     "auth.title": "Sign in to PenguinMod",
     "auth.subtitle": "Use your Scratch account to sign in to PenguinMod.",
     "auth.copy": "Copy",
@@ -334,10 +334,10 @@
     "profile.featured.title20": "My Animation",
     "profile.bio.title": "About Me",
     "profile.bio.inappropriate": "Your bio contains inappropriate words or websites we don't allow. Please remove them to change your bio.",
-    "profile.bio.warning1": "Don't say your real name",
-    "profile.bio.warning2": "Don't say how old you are or when you were born",
-    "profile.bio.warning3": "Don't say where you live",
-    "profile.bio.warning4": "Don't say your password or your email",
+    "profile.bio.warning1": "no reel name",
+    "profile.bio.warning2": "no age oon bio",
+    "profile.bio.warning3": "no where u live",
+    "profile.bio.warning4": "no say password no email",
     "profile.info.edit": "Edit",
     "profile.info.edit.admin": "Edit (Admin)",
     "profile.bio.none": "There's nothing here.. yet! Write some things you want to share here!",
@@ -371,7 +371,7 @@
     "uploading.error.cannotusethisextensionforthisrank.custom": "{{EXTENSION_ID}} (Custom)",
     "uploading.error.cannotusethisextensionforthisrank.unnamed": "{{EXTENSION_ID}} (Unknown name)",
     "uploading.error.projecttoolarge": "Your project is too large. Make sure bitmap images inside vector costumes are not too large, your music is not too long, or try deleting other content.",
-    "home.video.error": "Your browser cannot play this video.",
+    "home.video.error": "ur browser cannot play this video.",
     "navigation.error.400": "Insufficient or invalid parameters were provided.",
     "navigation.error.401": "You are not properly logged in to access this page.",
     "navigation.error.403": "You do not have access to this page.",
@@ -430,5 +430,5 @@
     "profile.donator.color.name": "Name color:",
     "profile.donator.font.name": "Select a font",
     "profile.donator.image.background": "Background image:",
-    "report.reason.project.virus": "The project has viruses or dangerous files"
+    "report.reason.project.virus": "this project might hack u"
 }
